--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,11 @@ body {
     background-color: white;
     flex-wrap: wrap;
     overflow: auto;
+    max-width: 2060px;
+}
+
+span {
+    color: #FF6F00
 }
 
 header,
@@ -10,22 +15,20 @@ nav,
 main,
 aside,
 footer {
-    display: flex;
-    background-color: rgb(231, 231, 231);
-    margin: 3px;
+    flex: 1 1 100vw;
+    margin: 5px;
 }
 
 header {
-    align-items: center;
     background-image:
-        /* linear-gradient(to right, rgba(255, 255, 255, 0), rgb(0, 0, 0, 0.8)),
-        linear-gradient(to left, rgba(255, 255, 255, 0), rgb(0, 0, 0, 0.8)), */
-        linear-gradient(to top, rgba(255, 255, 255, 0), rgb(0, 0, 0, 0.8)),
+        linear-gradient(to top, rgba(255, 255, 255, 0), rgb(0, 0, 0, 0.9)),
+        linear-gradient(to bottom, rgba(255, 255, 255, 0), rgb(0, 0, 0, 0.9)),
         url("../assets/dbe-icon.png");
-    flex: 1 1 100vw;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
     flex-direction: column;
-    height: 60vh;
-    justify-content: center;
+    height: 800px;
     margin: 0 0 100px 0;
 }
 
@@ -43,17 +46,33 @@ aside {
 
 footer {
     background-color: #332E2B;
-    flex: 1 1 100vw;
     height: 350px;
     margin: 100px 0 0 0;
 }
 
+a {
+    text-decoration: none;
+}
 
+#header-menu {
+    height: 100px;
+    text-align: right;
+    margin: 15px;
+}
+
+#header-menu li {
+    display: inline-block;
+    color: white;
+    font-family: "Lexend-Medium";
+    list-style-type: none;
+    margin: 20px;
+}
 
 #banner-title {
     color: white;
     font-family: "Lexend-Medium";
     font-size: 50px;
+    margin-top: 100px;
     text-align: center;
 }
 
@@ -64,6 +83,17 @@ footer {
     text-align: center;
 }
 
+#discord-button {
+    border: solid 2px white;
+    border-radius: 15px;
+    padding: 15px;
+}
+
+#discord-button:hover {
+    border: solid 2px white;
+    border-radius: 15px;
+    padding: 15px;
+}
 
 /* #content-list {
     display: grid;
@@ -97,3 +127,25 @@ footer {
     font-size: x-large;
     font-family: Verdana, Geneva, Tahoma, sans-serif
 } */
+
+
+
+
+#version-list {
+    background-color: rgb(233, 233, 233);
+    border-collapse: collapse;
+    border-radius: 5px;
+    font-family: "Lexend-Light";
+    height: 150px;
+}
+
+#version-list td {
+    border-top: solid 1px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    padding: 0 100px 0 100px;
+}
+
+#game-version {
+    background-color: rgb(173, 173, 173);
+    border-radius: 25px;
+}
