--- a/styles/post-style.css
+++ b/styles/post-style.css
@@ -1,8 +1,8 @@
-#post {
+.post {
     margin: 10px;
 }
 
-#post-title {
+.postTitle {
     color: #332E2B;
     font-family: "Lexend-Medium";
     font-size: 60px;
@@ -10,7 +10,7 @@
     margin-bottom: 25px;
 }
 
-#post-banner {
+.postBanner {
     width: 100%;
     height: 400px;
     object-fit: cover;
@@ -18,32 +18,8 @@
     margin: 25px 0 25px 0;
 }
 
-#post-description {
+.postDescription {
     color: #544438;
     font-family: "Lexend-Light";
     font-size: 22px;
-}
-
-#download-button {
-    background-color: #332E2B;
-    border: none;
-    border-radius: 15px;
-    color: white;
-    font-family: "Lexend-Medium";
-    font-size: 20px;
-    height: 60px;
-    width: 175px;
-    margin-top: 25px;
-}
-
-#download-button:hover {
-    background-color: #D47024;
-    transform: scale(1.1);
-    transition: 0.5s;
-}
-
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
