--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,7 +22,6 @@ footer {
 header {
     background-image:
         linear-gradient(to top, rgba(255, 255, 255, 0), rgb(0, 0, 0, 0.9)),
-        linear-gradient(to bottom, rgba(255, 255, 255, 0), rgb(0, 0, 0, 0.9)),
         url("../assets/dbe-icon.png");
     background-size: cover;
     background-position: center center;
@@ -54,13 +53,13 @@ a {
     text-decoration: none;
 }
 
-#header-menu {
-    height: 100px;
+#headerMenu {
+    height: 80px;
     text-align: right;
-    margin: 15px;
+    margin: 20px;
 }
 
-#header-menu li {
+#headerMenu li {
     display: inline-block;
     color: white;
     font-family: "Lexend-Medium";
@@ -68,7 +67,7 @@ a {
     margin: 20px;
 }
 
-#banner-title {
+#bannerTitle {
     color: white;
     font-family: "Lexend-Medium";
     font-size: 50px;
@@ -76,24 +75,26 @@ a {
     text-align: center;
 }
 
-#banner-description {
+#bannerDescription {
     color: white;
     font-family: "Lexend-Thin";
     font-size: 18px;
     text-align: center;
 }
 
-#discord-button {
+#discordButton {
     border: solid 2px white;
     border-radius: 15px;
     padding: 15px;
 }
 
-#discord-button:hover {
+#discordButton:hover {
     border: solid 2px white;
     border-radius: 15px;
     padding: 15px;
 }
+
+
 
 /* #content-list {
     display: grid;
@@ -130,22 +131,41 @@ a {
 
 
 
-
-#version-list {
+.versionList {
+    align-content: center;
     background-color: rgb(233, 233, 233);
-    border-collapse: collapse;
     border-radius: 5px;
+    box-shadow: 4px 4px 10px 0px #000000;
     font-family: "Lexend-Light";
-    height: 150px;
+    height: 200px;
+    margin-top: 100px;
+    text-align: center;
 }
 
-#version-list td {
-    border-top: solid 1px rgba(0, 0, 0, 0.1);
-    margin: 10px;
-    padding: 0 100px 0 100px;
+.versionList table {
+    border-collapse: collapse;
+    height: 90%;
+    width: 90%;
 }
 
-#game-version {
-    background-color: rgb(173, 173, 173);
-    border-radius: 25px;
+.versionList table td {
+    border-top: solid 1px #c4c4c4;
+}
+
+.downloadArrowDown {
+    border-radius: 100%;
+    height: 25px;
+    width: 25px;
+    padding: 15px;
+}
+
+.downloadArrowDown:hover {
+    background-color: #FF6F00;
+    transition: 0.5s;
+}
+
+.downloadArrowDown img {
+    height: inherit;
+    width: inherit;
+    object-fit: cover;
 }
